# ilpost-podcast-scraper

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  skaffold.yaml
.github/workflows/: codeql-analysis.yml  main.yml  pr.yaml  release.yml
.trunk/: trunk.yaml
charts/ilpostpodcastscraper/: Chart.yaml  values.yaml
charts/ilpostpodcastscraper/templates/: _helpers.tpl  deployment.yaml  env.yaml  redis-data.yaml  redis.yaml  scraper-default.yaml  scraper.yaml  selenium.yaml
k8s/: ilpost-scraper-default-networkpolicy.yaml  ilpost-scraper-deployment.yaml  ilpost-scraper-service.yaml  morning-default-networkpolicy.yaml  morning-deployment.yaml  morning-service.yaml  redis-data-persistentvolumeclaim.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml.dist  selenium-deployment.yaml  selenium-service.yaml
src/: ilpostscraper.py  morning.py
