[tool.poetry]
name = "ilpostscraper"
version = "0.1.0"
description = "A scraper for ilpost.it"
authors = ["Andrea Cervesato <andrea.cervesato@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.2.0"
gunicorn = "^20.1.0"
requests = "^2.31.0"
redis = "^4.5.4"
python-dotenv = "^0.20.0"
fastapi = "^0.78.0"
uvicorn = "^0.23.0"
orjson = "^3.7.2"
logging = "^0.4.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
