[tool.poetry]
name = "ilpostscraper"
version = "0.1.0"
description = "A scraper for ilpost.it"
authors = ["Andrea Cervesato <andrea.cervesato@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.2.0"
gunicorn = "^21.0.0"
requests = "^2.31.0"
redis = "^5.0.0"
python-dotenv = "^1.0.0"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
orjson = "^3.9.12"
logging = "^0.4.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
